<resources>
    <string name="app_name">Beautiful</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Do not have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="signup">Create Account</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
</resources>