<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_bg"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/login_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-light"
      android:text="@string/login"
      android:textColor="#000000"
      android:textSize="37sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.102" />

  <LinearLayout
      android:id="@+id/linearLayoutLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:gravity="center"
      android:orientation="vertical"
      android:padding="1dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_login_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email Address"
        android:padding="10dp"
        android:textColorHint="#333333"
        app:boxStrokeColor="#7726C7">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/email_login_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:textColor="#171717"
          android:textColorHint="#757575"
          tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_login_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:padding="10dp"
        android:textColorHint="#333333"
        app:boxStrokeColor="#7726C7"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/custom_purple2"
        tools:ignore="HardcodedText">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/password_login_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:textColor="#171717"
          tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_button_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColorHint="#333333"
        app:boxStrokeColor="#7726C7">

      <Button
          android:id="@+id/login_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:backgroundTint="#7726C7"
          android:padding="17dp"
          android:text="Login"
          android:textAllCaps="false"
          android:textColor="@color/white"
          android:textSize="16sp"
          tools:ignore="HardcodedText,DuplicateSpeakableTextCheck,VisualLintButtonSize" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--    <Button-->
    <!--        android:id="@+id/login_button"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:backgroundTint="#7726C7"-->
    <!--        android:text="Login"-->
    <!--        android:textAllCaps="false"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="16sp"-->
    <!--        tools:ignore="HardcodedText,DuplicateSpeakableTextCheck,VisualLintButtonSize" />-->

  </LinearLayout>

  <Button
      android:id="@+id/forgot_pass_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@android:color/transparent"
      android:fontFamily="sans-serif-medium"
      android:text="@string/forgot_password"
      android:textAllCaps="false"
      android:textColor="#000000"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayoutLogin" />

  <TextView
      android:id="@+id/donthaveacc_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-light"
      android:text="@string/don_t_have_an_account"
      android:textColor="#000000"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/createacc_intent_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0" />

  <Button
      android:id="@+id/createacc_intent_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="50dp"
      android:background="@android:color/transparent"
      android:fontFamily="sans-serif-medium"
      android:text="Create Account"
      android:textAllCaps="false"
      android:textColor="@color/custom_purple"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
